--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,15 @@
 
 @import url(//db.onlinewebfonts.com/c/d8a28611cf5f5d635071f2d90d9e9cc8?family=Sk-Modernist);
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
-
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body{
   width: auto;
 
+}
+html, body, label {
+  font-family: 'Roboto', sans-serif;
 }
 
 /* width */
